--- a/pages/8209.html
+++ b/pages/8209.html
@@ -915,7 +915,7 @@ margin-left: 0em;
 <img src="https://ncatlab.org/nlab/files/QCDPhaseDiagram.jpg" width="400" />
 </center>
 <blockquote>
-<p><strong>Schematic <a class="existingWikiWord" href="/nlab/show/phase+diagram">phase diagram</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</strong> The vertical axis indicates <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math>, the horizontal axis indicates <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a> <a class="existingWikiWord" href="/nlab/show/density">density</a>. At low enough tempeterature <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> only appear as <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>). But above a critical temperature these <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> break apart (deconfinement) and <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> may exist freely. This <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is the <em>quark-gluon plasma</em>.</p>
+<p><strong>Schematic <a class="existingWikiWord" href="/nlab/show/phase+diagram">phase diagram</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</strong> The vertical axis indicates <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math>, the horizontal axis indicates <a class="existingWikiWord" href="/nlab/show/baryon">baryon</a> <a class="existingWikiWord" href="/nlab/show/density">density</a>. At low enough temperature <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> only appear as <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> (<a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>). But above a critical temperature these <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> break apart (deconfinement) and <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> may exist freely. This <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase</a> of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is the <em>quark-gluon plasma</em>.</p>
 
 <p>graphics grabbed from <a href="#Blaizot03">Blaizot 03</a>.</p>
 </blockquote>
@@ -1026,7 +1026,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Holographic discussion of the <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> of the quark-gluon plasema goes back to</p>
+<p>Holographic discussion of the <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> of the quark-gluon plasma goes back to</p>
 
 <ul>
 <li id="PolicastroSonStarinets01"><a class="existingWikiWord" href="/nlab/show/Giuseppe+Policastro">Giuseppe Policastro</a>, D.T. Son, A.O. Starinets, <em>Shear viscosity of strongly coupled <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">N=4</annotation></semantics></math> supersymmetric Yang-Mills plasma</em>, Phys. Rev. Lett.87:081601, 2001 (<a href="http://arxiv.org/abs/hep-th/0104066">arXiv:hep-th/0104066</a>)</li>
@@ -1049,14 +1049,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 09:56:29.
+  Last revised on November 17, 2018 at 11:16:21.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
