--- a/pages/8649.html
+++ b/pages/8649.html
@@ -1174,10 +1174,10 @@ margin-left: 0em;
 
 <h2 id="reference">Reference</h2>
 
-<p>The name of the concept is due to</p>
+<p>The concept is named after</p>
 
 <ul>
-<li id="Dirac31"><a class="existingWikiWord" href="/nlab/show/P.A.M.+Dirac">P.A.M. Dirac</a>, <em>Quantized Singularities in the Electromagnetic Field</em>, Proceedings of the Royal Society, A133 (1931) pp 60–72.</li>
+<li id="Dirac31"><a class="existingWikiWord" href="/nlab/show/P.A.M.+Dirac">P.A.M. Dirac</a>, <em>Quantized Singularities in the Electromagnetic Field</em>, Proceedings of the Royal Society, A133 (1931) pp 60–72 (<a href="http://rspa.royalsocietypublishing.org/content/133/821/60.short">doi:10.1098/rspa.1931.0130</a>)</li>
 </ul>
 
 <p>Review is for instance in</p>
@@ -1203,14 +1203,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 06:27:08.
+  Last revised on November 18, 2018 at 03:50:16.
   See the <a href="https://ncatlab.org/nlab/history/Dirac charge quantization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+charge+quantization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+charge+quantization/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Dirac+charge+quantization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+charge+quantization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dirac+charge+quantization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+charge+quantization/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Dirac+charge+quantization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+charge+quantization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Dirac charge quantization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
