--- a/pages/444.html
+++ b/pages/444.html
@@ -761,7 +761,7 @@ margin-left: 0em;
 <div class="num_defn">
 <h6 id="definition_6">Definition</h6>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/small+category">small category</a> its <em>nerve</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">N(\mathcal{C})</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/simplicial+set">simplicial set</a> give by</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/small+category">small category</a> its <em>nerve</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">N(\mathcal{C})</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/simplicial+set">simplicial set</a> given by</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">(</mo><mi>𝒞</mi><mo stretchy="false">)</mo><mo lspace="verythinmathspace">:</mo><msup><mi>Δ</mi> <mi>op</mi></msup><mo>↪</mo><msup><mi>Cat</mi> <mi>op</mi></msup><mover><mo>→</mo><mrow><mi>Cat</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mi>𝒞</mi><mo stretchy="false">)</mo></mrow></mover><mi>Set</mi><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
   N(\mathcal{C}) 
   \colon 
@@ -1164,14 +1164,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 18, 2018 at 05:44:07.
+  Last revised on November 18, 2018 at 08:47:36.
   See the <a href="https://ncatlab.org/nlab/history/nerve" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/nerve/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
